# dev-politica-bot

./: .gitignore  Dockerfile.base  LOCATION_FEATURE.md  README.md  docker-compose.yml  proposicoes.csv  test.ipynb
api-agents-whatsapp/: .env.example  pyproject.toml
api-agents-whatsapp/src/api_agents_whatsapp/: models.py  services.py
api-audio-processing/: .env.example  README.md  pyproject.toml
api-audio-processing/src/api_audio_processing/: __init__.py  config.py  main.py  models.py  services.py
api-mcp-projetos-lei/: README.md  pyproject.toml
api-mcp-projetos-lei/src/api_mcp_projetos_lei/: __init__.py  config.py  main.py  prompts.py  resources.py  tools.py
api-mcp-projetos-lei/src/api_mcp_projetos_lei/scrapers/: camara_deputados.py
api-mcp-users/src/api_mcp_users/: main.py  tools.py
orchestrator/src/orchestrator/: models.py  models_db.py
orchestrator/src/orchestrator/services/: __init__.py  location_service.py  message_buffer_service.py  message_service.py  user_service.py
screening/: api-camara-deputados.ipynb  crawling-camara.ipynb  test-agno-mcp.py  test-audio-processing-api.py  test-whatsapp-service.py
whatsapp-service/: .env.example  README.md  client.js  handlers.js  index.js  messageQueue.js  package-lock.json  package.json  webhookServer.js
